--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -140,6 +140,11 @@
 		\end{cases}
 		\end{displaymath}
 	\end{definition}
+	\section{Anàlisi matemàtica}
+	\subsection{Definicions}
+	\begin{definition}[Convergència uniforme]
+		\labelname{convergència uniforme}\label{def:convergència uniforme}
+	\end{definition}
 %	\begin{theorem}[Teorema de la divisió Euclidiana]
 %		\labelname{Teorema de la divisió Euclidiana}\label{thm:divisió euclidiana}
 %	\end{theorem}
