Modificada la teoria i arreglat uns errors a EDOS I. També un error a Estructures

--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -59,7 +59,7 @@
 			
 			I com que \(t_{i}<\xi_{i,j}<t_{i+1}\) tenim que \(\xi_{i,j}=t_{i}\) per a tot \(j\in\{1,\dots,m\}\). Així veiem que si \(n\to\infty\) podem reescriure \eqref{eq:1} com
 			\begin{displaymath}
-			\Long(P_{n})=\sum_{i=0}^{n-1}(t_{i+1}-t_{i})\norm{f'(t_{i})}=\int_{a}^{b}\norm{f'(t)}\diff t.
+			\Long(P_{n})=\lim_{n\to\infty}\sum_{i=0}^{n-1}(t_{i+1}-t_{i})\norm{f'(t_{i})}=\int_{a}^{b}\norm{f'(t)}\diff t.
 			\end{displaymath}
 			
 			I ja hem acabat. Com que \(f\in\mathcal{C}^{1}\) tenim \(f'\) contínua, i \(a,b\in\mathbb{R}\), aquesta integral és finita i \(\Gamma\) és rectificable, com volíem veure.
