--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2344,7 +2344,7 @@
 	\subsection{Arrels d'un polinomi}
 	\begin{definition}[Descomposició d'un polinomi]
 		\labelname{descomposició d'un polinomi}\label{def:descomposició d'un polinomi}
-		Siguin \(\mathbb{K}\) un cos amb la suma \(+\) i el producte \(\cdot\), \(\mathbb{L}\) un subcòs de \(\mathbb{K}\) i \(f(x)\) un polinomi de \(\mathbb{K}\) tal que existeixen \(\alpha_{1},\dots,\alpha_{n}\in\mathbb{K}\) satisfent \(f(x)=(x-\alpha_{1})\cdot\ldots\cdot(x-\alpha_{n})\). Aleshores direm que \(f(x)\) descompon en \(\mathbb{K}\).
+		Siguin \(\mathbb{K}\) un cos amb la suma \(+\) i el producte \(\cdot\) i \(f(x)\) un polinomi de \(\mathbb{K}\) tal que existeixen \(\alpha_{1},\dots,\alpha_{n}\in\mathbb{K}\) satisfent \(f(x)=(x-\alpha_{1})\cdot\ldots\cdot(x-\alpha_{n})\). Aleshores direm que \(f(x)\) descompon en \(\mathbb{K}\).
 	\end{definition}
 	\begin{theorem}[Teorema de Kronecker]
 		\labelname{Teorema de Kronecker}\label{thm:Teorema de Kronecker}
