--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -110,7 +110,7 @@
 	\begin{theorem}[Teorema Fonamental del Càlcul]
 		\labelname{Teorema Fonamental del Càlcul}\label{thm:Teorema Fonamental del Càlcul}
 		Siguin \([a,b]\) un interval de \(\mathbb{R}\), \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció contínua en \([a,b]\) i
-		\[F(x)=\int_{a}^{x}f(x)dx\]
+		\[F(x)=\int_{a}^{x}f(t)dt\]
 		una funció. Aleshores \(F(x)\) és derivable en \([a,b]\) i \(F'(x)=f(x)\) per a tot \(x\) de \([a,b]\).
 	\end{theorem}
 	\section{Trobar lloc per tot això}
